; ModuleID = '/home/carl/AnghaBench/postgres/src/backend/access/rmgrdesc/extr_genericdesc.c_generic_desc.c'
source_filename = "/home/carl/AnghaBench/postgres/src/backend/access/rmgrdesc/extr_genericdesc.c_generic_desc.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

@.str = private unnamed_addr constant [23 x i8] c"offset %u, length %u; \00", align 1
@.str.1 = private unnamed_addr constant [21 x i8] c"offset %u, length %u\00", align 1

; Function Attrs: noinline nounwind optnone uwtable
define dso_local void @generic_desc(i32 %0, i32* %1) #0 {
  %3 = alloca i32, align 4
  %4 = alloca i32*, align 8
  %5 = alloca i64, align 8
  %6 = alloca i64, align 8
  %7 = alloca i64, align 8
  %8 = alloca i64, align 8
  store i32 %0, i32* %3, align 4
  store i32* %1, i32** %4, align 8
  %9 = load i32*, i32** %4, align 8
  %10 = call i64 @XLogRecGetData(i32* %9)
  store i64 %10, i64* %5, align 8
  %11 = load i64, i64* %5, align 8
  %12 = load i32*, i32** %4, align 8
  %13 = call i64 @XLogRecGetDataLen(i32* %12)
  %14 = add nsw i64 %11, %13
  store i64 %14, i64* %6, align 8
  br label %15

15:                                               ; preds = %44, %2
  %16 = load i64, i64* %5, align 8
  %17 = load i64, i64* %6, align 8
  %18 = icmp slt i64 %16, %17
  br i1 %18, label %19, label %45

19:                                               ; preds = %15
  %20 = load i64, i64* %5, align 8
  %21 = call i32 @memcpy(i64* %7, i64 %20, i32 8)
  %22 = load i64, i64* %5, align 8
  %23 = add i64 %22, 8
  store i64 %23, i64* %5, align 8
  %24 = load i64, i64* %5, align 8
  %25 = call i32 @memcpy(i64* %8, i64 %24, i32 8)
  %26 = load i64, i64* %5, align 8
  %27 = add i64 %26, 8
  store i64 %27, i64* %5, align 8
  %28 = load i64, i64* %8, align 8
  %29 = load i64, i64* %5, align 8
  %30 = add nsw i64 %29, %28
  store i64 %30, i64* %5, align 8
  %31 = load i64, i64* %5, align 8
  %32 = load i64, i64* %6, align 8
  %33 = icmp slt i64 %31, %32
  br i1 %33, label %34, label %39

34:                                               ; preds = %19
  %35 = load i32, i32* %3, align 4
  %36 = load i64, i64* %7, align 8
  %37 = load i64, i64* %8, align 8
  %38 = call i32 @appendStringInfo(i32 %35, i8* getelementptr inbounds ([23 x i8], [23 x i8]* @.str, i64 0, i64 0), i64 %36, i64 %37)
  br label %44

39:                                               ; preds = %19
  %40 = load i32, i32* %3, align 4
  %41 = load i64, i64* %7, align 8
  %42 = load i64, i64* %8, align 8
  %43 = call i32 @appendStringInfo(i32 %40, i8* getelementptr inbounds ([21 x i8], [21 x i8]* @.str.1, i64 0, i64 0), i64 %41, i64 %42)
  br label %44

44:                                               ; preds = %39, %34
  br label %15

45:                                               ; preds = %15
  ret void
}

declare dso_local i64 @XLogRecGetData(i32*) #1

declare dso_local i64 @XLogRecGetDataLen(i32*) #1

declare dso_local i32 @memcpy(i64*, i64, i32) #1

declare dso_local i32 @appendStringInfo(i32, i8*, i64, i64) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
